# sandbox

4-clojure/: README.md  project.clj
advent-of-code-2018/: README.md  project.clj
advent-of-code-e2018/: .gitignore  advent-of-code-e2018.cabal  package.yaml
airflow/: airflow.cfg  airflow.db  unittests.cfg
baton/: .ensime  build.sbt
bird-pearls/: README.md  build.boot
bitcoin/: .gitignore  package.yaml
call-c-from-rust/: README.md
clojure-bits/: CHANGELOG.md  README.md  deps.edn
comonads/: .gitignore  README.md  package.yaml
data-visualization-clojure/: deps.edn
google-graph/: .gitignore  package.yaml
haskell-articles/: haskell-articles.cabal  package.yaml  stack.yaml
haskell-articles/src/: Bitcoin.hs  Strategy.hs  TheEssenceOfDataflowProgramming.hs
haskell-bits/: README.md  haskell-misc.cabal  package.yaml  stack.yaml
haskell-misc/: .gitignore  haskell-misc.cabal  package.yaml
haskell-web/: .gitignore  ChangeLog.md  package.yaml  stack.yaml
iteratee/: CHANGELOG.md  README.md
learn-fsharp/: .gitignore  HelloWorld.fs
learn-you-an-agda/: peano.agda
mancala/: .gitignore  README.md  package.yaml
mancala-rust/: Cargo.toml  README.md
minikube/: .env  bla.py  nginx-deployment.yaml
mixed-integer-programming/: .python-version
probability/: .python-version
python-asyncio/: .flake8rc  .pylintrc  .python-version  Makefile
python-from-haskell/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
python-schemas/: .python-version
raft/: Dockerfile  Makefile  deps.edn
rust-futures/: Cargo.toml
scraping/: ChangeLog.md  (+4 more)
(+215 files in other folders)
