cabal-version: 1.12

name:           haskell-articles
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/the-essence-of-dataflow-programming#readme>
homepage:       https://github.com/bartfrenk/haskell-articles#readme
bug-reports:    https://github.com/bartfrenk/haskell-articles/issues
author:         Bart Frenk
maintainer:     bart.frenk@gmail.com
copyright:      2018 Bart Frenk
license:        BSD3
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/bartfrenk/haskell-articles

library
  exposed-modules:
      Bitcoin
      Strategy
      Snark
      TheEssenceOfDataflowProgramming
      ThereIsNoFork
  other-modules:
      Paths_haskell_articles
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cryptonite
    , free
    , mtl
    , random
  default-language: Haskell2010

test-suite the-essence-of-dataflow-programming-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_haskell_articles
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cryptonite
    , free
    , haskell-articles
    , mtl
    , random
  default-language: Haskell2010
